# Ranger-Alpha

./: CMakeLists.txt  README.md  config.json  config_backup.json  engine.cpp  engine.h  main.cpp
Ranger/: ranger.cpp  ranger.h
Ranger/Components/: CMakeLists.txt  scene_manager.cpp  scene_manager.h  stage.cpp  stage.h  transition_scene.cpp  transition_scene.h
Ranger/Components/Nodes/: CMakeLists.txt  basenode.cpp  basenode.h
Ranger/Core/: CMakeLists.txt  transform.cpp  transform.h
Ranger/Core/Timing/: CMakeLists.txt  scheduler.cpp  scheduler.h  timer.cpp  timer.h  timing_target.cpp  timing_target.h  update_target.cpp  update_target.h
Ranger/Extensions/: CMakeLists.txt  interpolation.h  math.cpp  math.h  matrix4.h  rectangle.h  vector3.h
Ranger/Extensions/Graphics/: CMakeLists.txt  camera.cpp  camera.h  view.cpp  view.h  viewport.cpp  viewport.h
Ranger/GLFW/: CMakeLists.txt  time.cpp  time.h  window.cpp  window.h
Ranger/IO/: CMakeLists.txt  base64.cpp  base64.h  configuration.cpp  configuration.h  json11.hpp
Ranger/Rendering/: CMakeLists.txt  color.cpp  color.h  freetypefont.cpp  freetypefont.h  rendercontext.cpp  rendercontext.h  shader.cpp  shader.h
Ranger/Rendering/GLObjects/: ebo.cpp  ebo.h  mesh.cpp  mesh.h  vao.cpp  vao.h  vbo.cpp  vbo.h
Ranger/Rendering/Shaders/: basic.vs  basic_shader.cpp  basic_shader.h  font.frag  font.vs  font_shader.cpp  font_shader.h  standard.vs  uniform_color.frag
Ranger/Rendering/Vectors/: CMakeLists.txt  atlas.cpp  atlas.h  uniform_atlas.cpp  uniform_atlas.h  vector_atlas.cpp  vector_atlas.h  vector_object.cpp  vector_object.h  vector_shape.cpp  vector_shape.h  vector_uniform_atlas.cpp  vector_uniform_atlas.h
Ranger/Rendering/Vectors/Shapes/: CMakeLists.txt  basic_shapes.cpp  basic_shapes.h
Ranger/Tests/: CMakeLists.txt  Test_Engine.cpp  Test_Engine.h  Test_Shell.cpp  Test_Shell.h
cmake_modules/: FindGLM.cmake
